// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prev Block Updater Prev Block Updater: handles duplicate inserts/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 1,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "next_block_id": 2,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 2,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`Prev Block Updater Prev Block Updater: handles insert/save 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 1,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "next_block_id": 2,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 2,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`Prev Block Updater Prev Block Updater: handles reverting inputs/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 1,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "next_block_id": 2,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 2,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`Prev Block Updater Prev Block Updater: handles reverting inputs/saves 2`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 1,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "next_block_id": 2,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 2,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": "50959061250196698fdad3ce1ca6649b21689692ee6c1fcde4aad4d9fbd24220",
      "next_block_id": 3,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`Prev Block Updater Prev Block Updater: handles reverting inputs/saves 3`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 1,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "next_block_id": 2,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 2,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;
